@@ -1,0 +1,1 @@
+spock.config.RunnerConfiguration
