@@ -3,6 +3,8 @@ include::include.adoc[]
 
 == 2.0-M4 (tbd)
 
+- Add a way to register `ConfigurationObject` globally without the need for a Global Extension
+
 == 2.0-M3 (2020-06-11)
 
 === Breaking Changes
